# agent-labs

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml  models.yaml  tools.yaml
docs/: api.md  architecture.md  development.md
src/agent_labs/: __init__.py  main.py
src/agent_labs/agents/: react_agent.py
src/agent_labs/api/: app.py  deps.py
src/agent_labs/api/middleware/: logging.py
src/agent_labs/api/routes/: agents.py  sessions.py  tools.py
src/agent_labs/config/: settings.py
src/agent_labs/core/: base_agent.py  base_memory.py  base_session.py  types.py
src/agent_labs/graph/: builder.py  nodes.py  state.py
src/agent_labs/memory/: manager.py
src/agent_labs/models/: manager.py
src/agent_labs/models/providers/: anthropic.py  base.py  openai.py
src/agent_labs/sessions/: manager.py
src/agent_labs/tests/: conftest.py
src/agent_labs/tests/unit/test_memory/: test_manager.py
src/agent_labs/tests/unit/test_tools/: test_executor.py
src/agent_labs/tools/: base.py  executor.py  registry.py
