[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-labs"
version = "0.1.0"
description = "A production-grade agent learning project based on LangGraph and FastAPI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "cyl1211" },
]
keywords = ["agent", "langgraph", "llm", "ai", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-httpx>=0.30.0",
    "coverage>=7.0",
    "ruff>=0.6.0",
    "mypy>=1.0",
]

[project.scripts]
agent-labs = "agent_labs.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/agent_labs/tests"]

[tool.coverage.run]
source = ["src/agent_labs"]
omit = ["src/agent_labs/tests/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
